# SeisGo

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  changes.txt  description.md  index.md  setup.cfg  setup.py
NoisePy/: README.md  Readme  S0A_dowload_ASDF_MPI.py  S1_fft_cc_MPI.py
OBS/: README.md  TCcorrection_examples_continous.ipynb  TCcorrection_examples_events.ipynb  TCcorrection_funcs.ipynb  TCcorrection_funcs.py  test.ipynb  tilt_compliance_correction.ipynb  tilt_compliance_correction_local.ipynb  utilities.py
docs/: conf.py  index.rst  requirements.txt
notebooks/: download_catalog.ipynb  download_continuous.ipynb  seisgo_download_xcorr_demo.ipynb  seisgo_dvv_workflow_example.ipynb  seisgo_xcorr_sac.ipynb  seispy_download_xcorr_demo.ipynb  seispy_xcorr_sac.ipynb  station.list  tcremoval_continuous.ipynb  tcremoval_continuous_correctorientation.ipynb  tcremoval_continuous_local.ipynb  tcremoval_earthquakes.ipynb  tcremoval_events.ipynb
scripts/: EQDownload.py  MPI_download.py  OBS_orientation_Cascadia.csv  seisgo_BANX_azimuthal_anisotropy.py  seisgo_download_MPI.py  seisgo_plot_xcorr_stack_MPI.py  seisgo_tcremoval_continuous_MPI.py  seispy_ccf2sac_MPI.py  seispy_cleaning_MPI.py  seispy_download_MPI.py  seispy_download_obsdata.py  seispy_fft_cc_MPI.py  seispy_plot_xcorr_stack_MPI.py  seispy_stacking_MPI.py  seispy_stacking_old.py  seispy_tcremoval_continuous.py  seispy_tcremoval_continuous_MPI.py  seispy_xcorr_MPI.py  seispy_xcorr_sac.py
seisgo/: __init__.py  (+14 more)
seisgo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+44 files in other folders)
