# Inside of setup.cfg
[metadata]
name = seisgo
description = A ready-to-go Python toolbox for seismic data analysis
long_description = file: README.md
keywords = seismology, seismic data analysis, seismic toolbox
license = MIT license
classifiers=
      Development Status :: 4 - Beta
      License :: OSI Approved :: MIT License
      Programming Language :: Python :: 3.7
